# chan-downloader

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: release.yml
src/: bin.rs  cli.yml  lib.rs  main.rs
