[package]
name = "chan-downloader"
description = "CLI to download all images/webms of a 4chan thread"
version = "0.1.4"
authors = ["Mariot Tsitoara <mariot.tsitoara@pm.me>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mariot/chan-downloader"
repository = "https://github.com/mariot/chan-downloader"
keywords = ["cli", "4chan", "download", "downloader", "crawler"]
categories = ["command-line-utilities"]

[lib]
name = "chan_downloader"
path = "src/lib.rs"

[[bin]]
name = "chan-downloader"
path = "src/bin.rs"

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
indicatif = "0.15.0"
lazy_static = "1.4.0"
regex = "1.4.2"
reqwest = "0.9.19"
