[package]
name = "chan-downloader"
description = "CLI to download all images/webms of a 4chan thread"
version = "0.3.0"
authors = ["Mariot Tsitoara <mariot.tsitoara@pm.me>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mariot/chan-downloader"
repository = "https://github.com/mariot/chan-downloader"
keywords = ["cli", "4chan", "4plebs", "download", "downloader", "crawler"]
categories = ["command-line-utilities"]

[lib]
name = "chan_downloader"
path = "src/lib.rs"

[[bin]]
name = "chan-downloader"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.62"
clap = {version = "3.2.17", features = ["cargo", "default"]}
env_logger = "0.9.0"
futures = "0.3.23"
indicatif = "0.17.0"
log = "0.4.17"
once_cell = "1.13.1"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
tokio = { version = "1.20", features = ["full"] }
